adding the number limit

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                   <input type="checkbox" name="operators" id="operator4" value="/" /><span class="ms-1 fs-3"><i class="fa-solid fa-divide"></i></span>
                 </label>
               </div>
+              <div class="mt-2">
+                <h5>Number Limit</h5>
+                <input type="range" id="numberSlider" value="10" min="10" max="50" step="1" />
+                <h2 id="sliderValue">10</h2>
+              </div>
             </div>
             <div class="col-md-3">&nbsp;</div>
           </div>
