hiding the correct answer

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <div id="questionArea" class="border">
                 <h1 id="question"></h1>
                 <!-- remove this before submitting -->
-                <p id="result"></p>
+                <p id="result" class="d-none"></p>
                 <h4>Your Answer:</h4>
                 <input type="number" step="1" id="answer" class="text-center" />
               </div>
